--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     
     <!-- 기본 SEO 메타태그 -->
     <meta name="description" content="선택 장애를 위한 랜덤 여행 코스 추천 서비스. 고민 없이 떠나는 즉흥 여행!" />
-    <meta name="keywords" content="랜덤여행, 여행추천, 선택장애, 여행코스, 즉흥여행, 도파민여행" />
+    <meta name="keywords" content="랜덤여행, 여행추천, 선택장애, 여행코스, 즉흥여행, 도파민여행, 랜덤 여행 코스, 국내 도파민 여행, 국내 랜덤 여행, AI 여행" />
     <meta name="author" content="도파민 여행" />
     
     <!-- Open Graph -->
