--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <meta name="theme-color" content="#000000" />
     
     <!-- 기본 SEO 메타태그 -->
-    <meta name="description" content="선택 장애를 위한 랜덤 여행 코스 추천 서비스. 고민 없이 떠나는 즉흥 여행!" />
-    <meta name="keywords" content="랜덤여행, 여행추천, 선택장애, 여행코스, 즉흥여행, 도파민여행, 랜덤 여행 코스, 국내 도파민 여행, 국내 랜덤 여행, AI 여행" />
+    <meta name="description" content="랜덤 여행 코스 추천 서비스. 선택장애 없이 고민 없이 떠나는 즉흥 여행!" />
+    <meta name="keywords" content="랜덤여행, 랜덤 여행, 여행추천, 선택장애, 여행코스, 즉흥여행, 도파민여행, 랜덤 여행 코스, 국내 도파민 여행, 국내 랜덤 여행, AI 여행" />
     <meta name="author" content="도파민 여행" />
     
     <!-- Open Graph -->
@@ -46,7 +46,7 @@
   <body>
     <noscript>
       <h1>도파민 여행 - 랜덤 여행 추천</h1>
-      <p>선택 장애를 위한 랜덤 여행 코스 추천 서비스입니다.</p>
+      <p>랜덤 여행 코스 추천 서비스입니다.</p>
       <p>JavaScript를 활성화해주세요.</p>
     </noscript>
     <div id="root"></div>
